Move elm assets into buid and ignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ django/website/search_index
 django/website/static
 django/website/uploads
 elm/elm-stuff
+elm/build
 reports/*
 .DS_Store
 .pydevproject
